--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -4,21 +4,9 @@ on: [push, pull_request]
 
 env:
   CARGO_TERM_COLOR: always
+  SURREALDB_VERSION: v1.4.0
 
 jobs:
-  dbbuild:
-    runs-on: ubuntu-latest
-    steps:
-    - name: Git checkout
-      uses: actions/checkout@v4
-
-    - name: Start SurrealDB
-      uses: jvllmr/surrealdb-action@2.0.0
-      with:
-        surrealdb-version: latest
-        surrealdb-port: 45678
-        surrealdb-user: root
-        surrealdb-password: root
   test:
     name: Test
     runs-on: ubuntu-latest
@@ -26,6 +14,13 @@ jobs:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
       - uses: Swatinem/rust-cache@v2
+
+      - name: Download SurrealDB
+        run: curl --proto '=https' --tlsv1.2 -sSf https://install.surrealdb.com | sh -s -- --version $SURREALDB_VERSION
+        
+      - name: Run SurrealDB root
+        run: surreal start --user root --pass --bind 0.0.0.0:8001 memory &
+        
       - name: Run tests
         run: cargo test
 
