--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -19,7 +19,7 @@ jobs:
         run: curl --proto '=https' --tlsv1.2 -sSf https://install.surrealdb.com | sh -s -- --version $SURREALDB_VERSION
         
       - name: Run SurrealDB root
-        run: surreal start --user root --pass --bind 0.0.0.0:8001 memory &
+        run: surreal start --user root --pass root --bind 0.0.0.0:8001 memory &
         
       - name: Run tests
         run: cargo test
