--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -56,6 +56,11 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+      - name: Download SurrealDB
+        run: curl --proto '=https' --tlsv1.2 -sSf https://install.surrealdb.com | sh -s -- --version $SURREALDB_VERSION
+        
+      - name: Run SurrealDB root
+        run: surreal start --user root --pass root --bind 0.0.0.0:8001 memory &
       - name: Generate code coverage
         run: |
           cargo tarpaulin --verbose --workspace
