--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,10 @@ tracing-bunyan-formatter = "0.3"
 tracing-log = "0.2"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 unicode-segmentation = "1.11.0"
+reqwest = {version = "0.12", features = ["json"]}
+fake = "2.9"
 
 [dev-dependencies]
 once_cell = "1.19"
-reqwest = "0.12"
+wiremock = "0.6"
+serde_json = "1.0.116"
